# face_trim

./: .gitignore  LICENSE  README.md  pyproject.toml
face_trm/: main.py
